Update config.json 6

--- a/config.json
+++ b/config.json
@@ -6,7 +6,8 @@
   }
   "type": "REST",
   "userInterfaces": {
-    "configInspector":
-    "size": "medium"
+    "configInspector": {
+      "size": "medium"
+    }
   }
 }
